<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">WeirdDices</string>
  <string name="d2">d2</string>
  <string name="d3">d3</string>
  <string name="d4">d4</string>
  <string name="d5">d5</string>
  <string name="d6">d6</string>
  <string name="d7">d7</string>
  <string name="d8">d8</string>
  <string name="d10">d10</string>
  <string name="d12">d12</string>
  <string name="d14">d14</string>
  <string name="d16">d16</string>
  <string name="d20">d20</string>
  <string name="d24">d24</string>
  <string name="d30">d30</string>
  <string name="d100">d100</string>
</resources>
